Update verified badge image URL

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: inline-block;
             width: 16px;
             height: 16px;
-            background-image: url('https://i.imgur.com/tz8hEZ1.jpeg');
+            background-image: url('https://i.imgur.com/22jnbK4.png');
             background-size: contain;
             background-repeat: no-repeat;
             margin-left: 4px;
